introduced proxy_redirect for vhost templates

--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -290,6 +290,7 @@ server {
 		fastcgi_pass {{ trim $upstream_name }};
 		{{ else }}
 		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }};
+		proxy_redirect {{ trim $proto }}://{{ trim $upstream_name }} /;
 		{{ end }}
 
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
@@ -339,6 +340,7 @@ server {
 		fastcgi_pass {{ trim $upstream_name }};
 		{{ else }}
 		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }};
+		proxy_redirect {{ trim $proto }}://{{ trim $upstream_name }} /;
 		{{ end }}
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
